--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "uni build -p mp-weixin",
+    "serve": "uni -p mp-weixin",
     "dev:app": "uni -p app",
     "dev:custom": "uni -p",
     "dev:h5": "uni",
@@ -55,12 +57,15 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3081220230802001",
     "@dcloudio/uni-mp-xhs": "3.0.0-alpha-3081220230802001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3081220230802001",
+    "@tuniao/tn-icon": "^1.8.0",
+    "@tuniao/tn-style": "^1.0.19",
+    "@tuniao/tnui-vue3-uniapp": "^1.0.20",
     "axios": "^0.27.2",
     "cz-git": "^1.4.1",
     "pinia": "^2.0.14",
-    "vk-uview-ui": "^1.3.7",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.1.10"
+    "vue-i18n": "^9.1.10",
+    "wot-design-uni": "^0.2.19"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
@@ -70,9 +75,11 @@
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3081220230802001",
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3081220230802001",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3081220230802001",
+    "@iconify/json": "^2.2.175",
     "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "@uni-helper/vite-plugin-uni-components": "^0.0.8",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitest/ui": "^0.34.4",
     "c8": "^7.11.3",
@@ -84,13 +91,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-todo-ddl": "^1.1.1",
     "eslint-plugin-vue": "^9.1.1",
-    "less": "^4.1.3",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.2.2",
     "unocss": "^0.55.7",
     "unocss-preset-weapp": "^0.55.2",
+    "unplugin-auto-import": "^0.17.5",
     "vite": "^4.4.9",
     "vitest": "^0.34.4"
   },
